city/build/parser.output
Grammaire

    0 $accept: programme $end

    1 programme: instruction NL programme
    2          | END NL

    3 instruction: operation

    4 operation: NUMBER
    5          | '(' operation ')'
    6          | operation '+' operation
    7          | operation '-' operation
    8          | operation '*' operation
    9          | operation '/' operation
   10          | '-' operation


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
'(' (40) 5
')' (41) 5
'*' (42) 8
'+' (43) 6
'-' (45) 7 10
'/' (47) 9
error (256)
NL (258) 1 2
END (259) 2
NUMBER (260) 4
NEG (261)


Non-terminaux, suivis des règles où ils apparaissent

$accept (13)
    à gauche: 0
programme (14)
    à gauche: 1 2, à droite: 0 1
instruction (15)
    à gauche: 3, à droite: 1
operation (16)
    à gauche: 4 5 6 7 8 9 10, à droite: 3 5 6 7 8 9 10


État 0

    0 $accept: . programme $end

    END     décalage et aller à l'état 1
    NUMBER  décalage et aller à l'état 2
    '-'     décalage et aller à l'état 3
    '('     décalage et aller à l'état 4

    programme    aller à l'état 5
    instruction  aller à l'état 6
    operation    aller à l'état 7


État 1

    2 programme: END . NL

    NL  décalage et aller à l'état 8


État 2

    4 operation: NUMBER .

    $défaut  réduction par utilisation de la règle 4 (operation)


État 3

   10 operation: '-' . operation

    NUMBER  décalage et aller à l'état 2
    '-'     décalage et aller à l'état 3
    '('     décalage et aller à l'état 4

    operation  aller à l'état 9


État 4

    5 operation: '(' . operation ')'

    NUMBER  décalage et aller à l'état 2
    '-'     décalage et aller à l'état 3
    '('     décalage et aller à l'état 4

    operation  aller à l'état 10


État 5

    0 $accept: programme . $end

    $end  décalage et aller à l'état 11


État 6

    1 programme: instruction . NL programme

    NL  décalage et aller à l'état 12


État 7

    3 instruction: operation .
    6 operation: operation . '+' operation
    7          | operation . '-' operation
    8          | operation . '*' operation
    9          | operation . '/' operation

    '-'  décalage et aller à l'état 13
    '+'  décalage et aller à l'état 14
    '*'  décalage et aller à l'état 15
    '/'  décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 3 (instruction)


État 8

    2 programme: END NL .

    $défaut  réduction par utilisation de la règle 2 (programme)


État 9

    6 operation: operation . '+' operation
    7          | operation . '-' operation
    8          | operation . '*' operation
    9          | operation . '/' operation
   10          | '-' operation .

    $défaut  réduction par utilisation de la règle 10 (operation)


État 10

    5 operation: '(' operation . ')'
    6          | operation . '+' operation
    7          | operation . '-' operation
    8          | operation . '*' operation
    9          | operation . '/' operation

    '-'  décalage et aller à l'état 13
    '+'  décalage et aller à l'état 14
    '*'  décalage et aller à l'état 15
    '/'  décalage et aller à l'état 16
    ')'  décalage et aller à l'état 17


État 11

    0 $accept: programme $end .

    $défaut  accepter


État 12

    1 programme: instruction NL . programme

    END     décalage et aller à l'état 1
    NUMBER  décalage et aller à l'état 2
    '-'     décalage et aller à l'état 3
    '('     décalage et aller à l'état 4

    programme    aller à l'état 18
    instruction  aller à l'état 6
    operation    aller à l'état 7


État 13

    7 operation: operation '-' . operation

    NUMBER  décalage et aller à l'état 2
    '-'     décalage et aller à l'état 3
    '('     décalage et aller à l'état 4

    operation  aller à l'état 19


État 14

    6 operation: operation '+' . operation

    NUMBER  décalage et aller à l'état 2
    '-'     décalage et aller à l'état 3
    '('     décalage et aller à l'état 4

    operation  aller à l'état 20


État 15

    8 operation: operation '*' . operation

    NUMBER  décalage et aller à l'état 2
    '-'     décalage et aller à l'état 3
    '('     décalage et aller à l'état 4

    operation  aller à l'état 21


État 16

    9 operation: operation '/' . operation

    NUMBER  décalage et aller à l'état 2
    '-'     décalage et aller à l'état 3
    '('     décalage et aller à l'état 4

    operation  aller à l'état 22


État 17

    5 operation: '(' operation ')' .

    $défaut  réduction par utilisation de la règle 5 (operation)


État 18

    1 programme: instruction NL programme .

    $défaut  réduction par utilisation de la règle 1 (programme)


État 19

    6 operation: operation . '+' operation
    7          | operation . '-' operation
    7          | operation '-' operation .
    8          | operation . '*' operation
    9          | operation . '/' operation

    '*'  décalage et aller à l'état 15
    '/'  décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 7 (operation)


État 20

    6 operation: operation . '+' operation
    6          | operation '+' operation .
    7          | operation . '-' operation
    8          | operation . '*' operation
    9          | operation . '/' operation

    '*'  décalage et aller à l'état 15
    '/'  décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 6 (operation)


État 21

    6 operation: operation . '+' operation
    7          | operation . '-' operation
    8          | operation . '*' operation
    8          | operation '*' operation .
    9          | operation . '/' operation

    $défaut  réduction par utilisation de la règle 8 (operation)


État 22

    6 operation: operation . '+' operation
    7          | operation . '-' operation
    8          | operation . '*' operation
    9          | operation . '/' operation
    9          | operation '/' operation .

    $défaut  réduction par utilisation de la règle 9 (operation)
